syntax = "proto3";


// 패키지명 정의
package auth;

// 유저 서비스 메서드 정의
service UsersService {
  rpc CreateUser (CreateUserDto) returns (User) {}
  rpc FindAllUsers (Empty) returns (Users) {}
  rpc FindOneUser (FindOneUserDto) returns (User) {}
  rpc UpdateUser (UpdateUserDto) returns (User) {}
  rpc RemoveUser (FindOneUserDto) returns (User) {}
  rpc QueryUsers (stream PaginationDto) returns (stream Users) {}
}

// CreateUserDto 형식 정의
message CreateUserDto {
  string username = 1;
  string password = 2;
  int32 age = 3;
}

// FindOneUserDto 형식 정의
message FindOneUserDto {
  string id = 1;
}

// UpdateUserDto 형식 정의
message UpdateUserDto {
  string id = 1;
  SocialMedia socialMedia = 2;
}

// PaginationDto 형식 정의
message PaginationDto {
  int32 page = 1;
  int32 size = 2;
}

// input/output 이 없는 경우의 형식 정의
message Empty {}

// 전송할 메시지 형식 정의 -> Users
message Users {
  repeated User users = 1;
}

// 전송할 메시지 형식 정의 -> User
message User {
  string id = 1; 
  string username = 2; 
  string password = 3;
  int32 age = 4;
  bool subscribed = 5;
  SocialMedia socialMedia = 6;
}

message SocialMedia {
  optional string twitterUri = 1; 
  optional string facebookUri = 2;
}